deployments/pathweb/workloads/home-network/wyoming-openwakeword/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wyoming-openwakeword
  namespace: home-network
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wyoming-openwakeword
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wyoming-openwakeword
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        runAsNonRoot: true
        seccompProfile:
          type: "RuntimeDefault"
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: node-group
                operator: In
                values: [baldric]
            weight: 100
      containers:
      - name: piper
        image: rhasspy/wyoming-openwakeword
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          readOnlyRootFilesystem: true
        args:
        - --preload-model
        - ok_nabu
        - --custom-model-dir
        - /data
        - --debug
        ports:
        - containerPort: 10400
          name: wyoming
        volumeMounts:
        - name: data
          mountPath: /data
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
      - name: data
        persistentVolumeClaim:
          claimName: wyoming-openwakeword-data
