deployments/pathweb/workloads/home-network/wyoming-openwakeword/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wyoming-openwakeword
  namespace: home-network
spec:
  selector:
    app.kubernetes.io/name: wyoming-openwakeword
  ports:
  - port: 10400
    targetPort: 10400
    name: wyoming
    protocol: TCP
